src/test/ui/parser/underscore_item_not_const.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:3:8
   |
LL | static _: () = ();
   |        ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:4:8
   |
LL | struct _();
   |        ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:5:6
   |
LL | enum _ {}
   |      ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:6:4
   |
LL | fn _() {}
   |    ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:7:5
   |
LL | mod _ {}
   |     ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:8:6
   |
LL | type _ = ();
   |      ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:9:5
   |
LL | use _;
   |     ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:10:5
   |
LL | use _ as g;
   |     ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:11:7
   |
LL | trait _ {}
   |       ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:12:7
   |
LL | trait _ = Copy;
   |       ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:13:14
   |
LL | macro_rules! _ { () => {} }
   |              ^ expected identifier, found reserved identifier

error: statements cannot reside in modules
  --> $DIR/underscore_item_not_const.rs:14:1
   |
LL | union _ { f: u8 }
   | ^^^^^
   |
   = note: the program entry point starts in `fn main() { ... }`, defined in `main.rs`
   = note: for more on functions and how to structure your program, see https://doc.rust-lang.org/book/ch03-03-how-functions-work.html
help: consider moving the statements into a function
   |
LL | fn my_function() -> _ { union } _ { f: u8 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected item, found reserved identifier `_`
  --> $DIR/underscore_item_not_const.rs:14:7
   |
LL | union _ { f: u8 }
   |       ^ expected item

error: aborting due to 13 previous errors

